--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,8 @@
-openai_api_key: "your openai api key"
-data_directory: "path/to/data/directory"
+openai_api_key: "your open ai api key"
+data_directory: "path/to/directory"
 data_files_glob: "*.txt"
 webpages:
   - "https://en.wikipedia.org/wiki/James_Webb_Space_Telescope"
   - "https://en.wikipedia.org/wiki/Black_hole"
 tone: "formal"
-persona: "expert"
+persona: "buddha"
