--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-data_directory: "path/to/directory" 
+data_directory: "base" 
 data_files_glob: "*.txt"
 webpages:
   - "https://en.wikipedia.org/wiki/James_Webb_Space_Telescope"
