--- a/.gitignore
+++ b/.gitignore
@@ -174,4 +174,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python
+
 know-my-doc.code-workspace
+.chroma/
