--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,6 @@ python-magic==0.4.27
 pinecone-client==2.2.1
 beautifulsoup4
 chromadb==0.3.11
+gunicorn==20.1.0
 #-e git+https://github.com/facebookresearch/detectron2.git@v0.6#egg=detectron2
 
