Added chatbot description, logo, and web references

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,10 @@
-data_directory: "base" 
+data_directory: "base"
 data_files_glob: "*.txt"
 webpages:
-  - "https://en.wikipedia.org/wiki/James_Webb_Space_Telescope"
-  - "https://en.wikipedia.org/wiki/Black_hole"
-  - "https://en.wikipedia.org/wiki/Roko%27s_basilisk"
+  - "https://texreg.sos.state.tx.us/public/readtac$ext.TacPage?sl=R&app=9&p_dir=&p_rloc=&p_tloc=&p_ploc=&pg=1&p_tac=&ti=30&pt=1&ch=115&rl=110"
+  - "https://texreg.sos.state.tx.us/public/readtac$ext.TacPage?sl=R&app=9&p_dir=&p_rloc=&p_tloc=&p_ploc=&pg=1&p_tac=&ti=30&pt=1&ch=115&rl=111"
+  - "https://texreg.sos.state.tx.us/public/readtac$ext.TacPage?sl=R&app=9&p_dir=&p_rloc=&p_tloc=&p_ploc=&pg=1&p_tac=&ti=30&pt=1&ch=115&rl=116"
+  - "https://www.celanese.com/en/news-and-media/2022/november/mobility-and-materials-acquisition"
+  - "https://www.celanese.com/en/products/santoprene-tpv-thermoplastic-vulcanizates"
 tone: "formal"
-persona: "buddha"
+persona: "helpful assistant"
